# musex

./: .gitignore  bot.py  main.py  obj.py  pyproject.toml  requirements.txt
ext/: help.py  music.py
