[tool.poetry]
name = "musex"
version = "0.1.0"
description = ""
authors = ["ReyterYT <reyteryt5@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.68.1"
uvicorn = "0.15.0"
cachetools = "4.2.2"
youtube_dl = "2021.6.6"
python-dotenv = "0.19.0"
python-multipart = "0.0.5"
jishaku = "2.3.0"
"discord.py" = {git = "https://github.com/Rapptz/discord.py"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
